[gd_scene load_steps=38 format=3 uid="uid://epr38ni8ir6w"]

[ext_resource type="Texture2D" uid="uid://cnkm41o7l7tma" path="res://Assets/Enemies/Orc/Orc-Attack01.png" id="1_b5hqv"]
[ext_resource type="Script" path="res://Scripts/Enemies_Scripts/orc.gd" id="1_bim8a"]
[ext_resource type="Texture2D" uid="uid://cxjtijh82awp5" path="res://Assets/Enemies/Orc/Orc-Attack02.png" id="2_7ewik"]
[ext_resource type="Texture2D" uid="uid://cvlldm445myde" path="res://Assets/Enemies/Orc/Orc-Death.png" id="3_2sws0"]
[ext_resource type="Texture2D" uid="uid://dfsfghrofbcwg" path="res://Assets/Enemies/Orc/Orc-Hurt.png" id="4_ddpcm"]
[ext_resource type="Texture2D" uid="uid://ifnjdy544sf2" path="res://Assets/Enemies/Orc/Orc-Walk.png" id="5_7akp3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_83d2s"]
atlas = ExtResource("1_b5hqv")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8c4h"]
atlas = ExtResource("1_b5hqv")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvku4"]
atlas = ExtResource("1_b5hqv")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yslsm"]
atlas = ExtResource("1_b5hqv")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kc8e"]
atlas = ExtResource("1_b5hqv")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_irrwd"]
atlas = ExtResource("1_b5hqv")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_41ylt"]
atlas = ExtResource("2_7ewik")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx4p4"]
atlas = ExtResource("2_7ewik")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbw8j"]
atlas = ExtResource("2_7ewik")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6xvp"]
atlas = ExtResource("2_7ewik")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpwbt"]
atlas = ExtResource("2_7ewik")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfvdj"]
atlas = ExtResource("2_7ewik")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2yql"]
atlas = ExtResource("3_2sws0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_emjaf"]
atlas = ExtResource("3_2sws0")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5kr1"]
atlas = ExtResource("3_2sws0")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xxbj"]
atlas = ExtResource("3_2sws0")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0v6i"]
atlas = ExtResource("4_ddpcm")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk8gl"]
atlas = ExtResource("4_ddpcm")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgmjx"]
atlas = ExtResource("4_ddpcm")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2uoy"]
atlas = ExtResource("4_ddpcm")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5hkp"]
atlas = ExtResource("5_7akp3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejs5m"]
atlas = ExtResource("5_7akp3")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3s7x"]
atlas = ExtResource("5_7akp3")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp5u8"]
atlas = ExtResource("5_7akp3")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q852r"]
atlas = ExtResource("5_7akp3")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_th41w"]
atlas = ExtResource("5_7akp3")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cavbj"]
atlas = ExtResource("5_7akp3")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdq65"]
atlas = ExtResource("5_7akp3")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_8x4qs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83d2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8c4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvku4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yslsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kc8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irrwd")
}],
"loop": false,
"name": &"ATTACK1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_41ylt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx4p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbw8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6xvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpwbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfvdj")
}],
"loop": false,
"name": &"ATTACK2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2yql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emjaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5kr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xxbj")
}],
"loop": false,
"name": &"DEATH",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0v6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk8gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgmjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2uoy")
}],
"loop": false,
"name": &"HURT",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5hkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejs5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3s7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp5u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q852r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th41w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cavbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdq65")
}],
"loop": true,
"name": &"WALK",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mow7o"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_svxt8"]
radius = 13.0

[node name="Orc" type="CharacterBody2D"]
scale = Vector2(1.1, 1.1)
collision_layer = 2
collision_mask = 23
script = ExtResource("1_bim8a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(34, 29)
sprite_frames = SubResource("SpriteFrames_8x4qs")
animation = &"ATTACK1"

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(35, 28)
shape = SubResource("CircleShape2D_mow7o")

[node name="AttackZone" type="Area2D" parent="."]

[node name="Attack1" type="CollisionPolygon2D" parent="AttackZone"]
polygon = PackedVector2Array(23, 12, 50, 16, 58, 32, 56, 40, 51, 42, 35, 39, 44, 31)

[node name="Attack2" type="CollisionPolygon2D" parent="AttackZone"]
position = Vector2(36, 29)
polygon = PackedVector2Array(-12, -16, -5.66473, -15.2398, 13, -13, 22, -7, 22, 2, 8, 16, -2, 10, 6, 0)

[node name="DetectZone" type="Area2D" parent="."]

[node name="DetectShape" type="CollisionShape2D" parent="DetectZone"]
position = Vector2(35, 29)
shape = SubResource("CircleShape2D_svxt8")

[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
